<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_below="@+id/front"
    android:id="@+id/cv"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/img"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:id="@+id/productImg" />

        <TextView
            android:text="@string/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/productName"
            android:textStyle="normal"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="18dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/productImg"
            android:layout_toEndOf="@+id/productImg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productName"
            android:layout_toRightOf="@id/productImg"
            android:layout_toEndOf="@id/productImg"
            android:layout_marginTop="2dp"
            android:id="@+id/price"
            android:text="@string/price"
            android:textSize="20sp" />

        <TextView
            android:text="@string/store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shop"
            android:textSize="18sp"
            android:layout_below="@+id/price"
            android:layout_toRightOf="@+id/productImg"
            android:layout_toEndOf="@+id/productImg"
            android:textColor="@color/accent_material_light" />

        <TextView
            android:text="@string/dist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dist"
            android:textSize="14sp"
            android:padding="4dp"
            android:layout_marginLeft="4sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_alignParentBottom="true" />


    </RelativeLayout>


</android.support.v7.widget.CardView>